removed sensitive files